--- a/package.json
+++ b/package.json
@@ -1,30 +1,22 @@
 {
   "scripts": {
     "start": "webpack-dev-server --hot --inline",
-    "build": "webpack",
-    "deploy": "rm -rf npm-debug.log && git checkout master && git commit -am 'update' && gh-pages-deploy"
-  },
-  "gh-pages-deploy": {
-    "prep": [
-      "build"
-    ],
-    "noprompt": true
+    "deploy": "git push origin `git subtree split --prefix build master`:gh-pages --force",
+    "build": "webpack"
   },
   "dependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
     "dat-gui": "^0.5.0",
-    "gl-matrix": "^2.3.2",
+    "file-loader": "^0.10.0",
     "stats-js": "^1.0.0-alpha1",
-    "three": "^0.82.1",
+    "three": "^0.84.0",
+    "three-effectcomposer": "0.0.1",
+    "three-obj-loader": "^1.0.2",
     "three-orbit-controls": "^82.1.0",
-    "three-obj-loader": "^1.0.2"
-  },
-  "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
-    "babel-preset-es2015": "^6.18.0",
-    "gh-pages-deploy": "^0.4.2",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0",
     "webpack-glsl-loader": "^1.0.1"
   }
 }
